Final Version - Taraneala
Added border searching.

--- a/haliteBot/haliteBot/haliteBot.vcxproj.filters
+++ b/haliteBot/haliteBot/haliteBot.vcxproj.filters
@@ -30,12 +30,18 @@
     <ClInclude Include="hlt.hpp">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="202v1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Player.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
