--- a/haliteBot/haliteBot/haliteBot.vcxproj
+++ b/haliteBot/haliteBot/haliteBot.vcxproj
@@ -147,11 +147,13 @@
   <ItemGroup>
     <ClInclude Include="hlt.hpp" />
     <ClInclude Include="networking.hpp" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="202v1.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
