--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,8 @@ local.properties
 *.suo
 *.user
 *.sln.docstates
+*.sdf
+*.ipch
 
 # Build results
 
@@ -219,4 +221,4 @@ pip-log.txt
 ##HALITE LOG FILES
 ###############
 
-.hlt
+*.hlt
