--- a/Final/Makefile
+++ b/Final/Makefile
@@ -9,21 +9,19 @@ SOURCES=$(wildcard $(SRCDIR)/*.cpp)
 INCLUDES=$(wildcard $(SRCDIR)/*.hpp)
 OBJECTS=$(SOURCES:$(SRCDIR)/%.cpp=$(OBJDIR)/%.o)
 
-EXECUTABLE="202.exe"
+EXECUTABLE="./202.exe"
 
 build: $(EXECUTABLE)
 
 run: $(EXECUTABLE)
-	./halite.exe -d "50 50" -s 42 $(EXECUTABLE)
+	$(EXECUTABLE)
 
 $(EXECUTABLE): $(OBJECTS)
 	$(CC) $(LDFLAGS) $(OBJECTS) -o $@
-	@echo "Linking complete!"
 
 $(OBJECTS): $(OBJDIR)/%.o: $(SRCDIR)/%.cpp $(INCLUDES)
 	@mkdir -p obj/
 	$(CC) $(CFLAGS) $< -o $@
-	@echo "Compiled $< successfully!"
 
 clean:
 	rm -f ${EXECUTABLE} ${OBJECTS} *.d *.hlt output_log.txt
